--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@
 CLOUDINARY_CLOUD_NAME=dt7d9chlu
 CLOUDINARY_API_KEY=933299356711757
 CLOUDINARY_API_SECRET=XsuZAerPuqeglSeAJ0mL8Tm_nnM
-DATABASE_URL=postgresql://postgres:TRYcwfHBsjkDjGJcsgpLUlJbxRgccovi@monorail.proxy.rlwy.net:55030/railway
+DB_NAME=railway
+DB_HOST=monorail.proxy.rlwy.net
+DB_USER=postgres
+DB_PASSWORD=TRYcwfHBsjkDjGJcsgpLUlJbxRgccovi
  
  PORT= 3001
