--- a/.env
+++ b/.env
@@ -2,9 +2,5 @@
 CLOUDINARY_CLOUD_NAME=dt7d9chlu
 CLOUDINARY_API_KEY=933299356711757
 CLOUDINARY_API_SECRET=XsuZAerPuqeglSeAJ0mL8Tm_nnM
-DB_NAME=railway
-DB_HOST=monorail.proxy.rlwy.net
-DB_USER=postgres
-DB_PASSWORD=TRYcwfHBsjkDjGJcsgpLUlJbxRgccovi
- 
- PORT= 3001
+DB_URL=postgresql://postgres:IreDMGzzfRRnyKnHrgmwpQxdcHtAGGMk@monorail.proxy.rlwy.net:13804/railway
+PORT=3001
