--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ CLOUDINARY_API_KEY=933299356711757
 CLOUDINARY_API_SECRET=XsuZAerPuqeglSeAJ0mL8Tm_nnM
 DB_URL=postgresql://postgres:IreDMGzzfRRnyKnHrgmwpQxdcHtAGGMk@monorail.proxy.rlwy.net:13804/railway
 PORT=3001
+
+ DB_USER= postgres
+ DB_PASSWORD= 123456
+ DB_HOST=localhost
+ DB_NAME=bosco 
